# anys

./: CHANGELOG.md  LICENSE  README.rst  anys.py  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test.yml
src/anys/: __init__.py
test/: test_any_and_or.py  test_any_compare.py  test_any_contains.py  test_any_datetime_str.py  test_any_func.py  test_any_in.py  test_any_instance.py  test_any_match.py  test_any_substr.py  test_any_truth.py  test_any_with_attrs.py  test_any_with_entries.py  test_lib.py  test_maybe.py  test_not.py  test_strict_equality.py
